# arena

./: env.sh  flake.nix  install.sh  pyproject.toml  start.sh
chapter1_transformer_interp/exercises/part1_transformer_from_scratch/: 1.1_Transformer_from_Scratch_exercises.ipynb
