[project]
name = "arena-3-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "anthropic>=0.42.0",
    "circuitsvis",
    "diffusers>=0.36.0",
    "docformatter>=1.7.7",
    "eindex-callum>=0.1.2",
    "einops>=0.7.0",
    "frozendict>=2.4.7",
    "ftfy>=6.3.1",
    "gdown>=5.2.0",
    "gymnasium[accept-rom-license,atari,mujoco-py,other]==0.29.0",
    "hdbscan>=0.8.41",
    "huggingface-hub>=0.36.0",
    "imageio-ffmpeg>=0.6.0",
    "inspect-ai>=0.3.159",
    "instructor>=1.13.0",
    "ipykernel>=7.1.0",
    "ipywidgets==7.7.1",
    "jaxtyping>=0.2.38",
    "jupyter>=1.1.1",
    "jupyterlab-widgets==1.1.1",
    "matplotlib>=3.10.8",
    "mediapy>=1.2.5",
    "mujoco>=3.4.0",
    "nbformat>=5.10.4",
    "neel-plotly",
    "nnsight>=0.3.5",
    "notebook>=7.5.1",
    "numpy-stl>=3.2.0",
    "openai>=1.56.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "plotly>=5.24.1",
    "portalocker>=2.0.0",
    "pre-commit>=4.5.1",
    "pygame>=2.6.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sae-lens>=4.0.0,<5.0.0",
    "sae-vis>=0.3.1",
    "safetensors>=0.4.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "streamlit-antd-components==0.2.5",
    "streamlit-image-select>=0.6.0",
    "streamlit-on-hover-tabs>=1.0.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchinfo>=1.8.0",
    "torchtext>=0.18.0",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformer-lens==2.11.0",
    "typeguard>=4.4.4",
    "umap-learn>=0.5.9.post2",
    "wandb>=0.23.1",
    "wikipedia>=1.4.0",
]

[tool.uv.sources]
circuitsvis = { git = "https://github.com/callummcdougall/CircuitsVis.git", subdirectory = "python" }
neel-plotly = { git = "https://github.com/neelnanda-io/neel-plotly" }
